// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Input/> render properly with "search" props 1`] = `
<input
  class="sc-bdfBwQ fmptkE"
  data-testid="input"
/>
`;

exports[`Component <Input/> render properly with "settings" props 1`] = `
<input
  class="sc-bdfBwQ ddQPAF"
  data-testid="input"
/>
`;

exports[`Component <Input/> render properly with default props 1`] = `
<input
  class="sc-bdfBwQ huaijo"
  data-testid="input"
/>
`;

exports[`Component <Input/> render properly with passed props 1`] = `
<input
  class="sc-bdfBwQ huaijo"
  data-testid="input"
  placeholder="Email address"
/>
`;
